// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Filter Added Filter 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-5 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-5:hover>div {
  background-color: #f3f5f8;
}

.emotion-5:active>div {
  background-color: #e7ebf2;
}

.emotion-5:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-5:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-6 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 0.25rem 0 1rem;
  border-radius: 1.5rem;
  border-right: 0!important;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-6:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-8 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-9 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-9 span {
  font-weight: 700;
}

.emotion-10 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-11 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-12 path {
  fill: #0f0f17;
}

.emotion-13 {
  height: 100%;
  width: 0.0625rem;
  position: relative;
  min-width: 0.0625rem;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  background-color: #cfd7e5;
  border-top: solid 0.0625rem #cfd7e5;
  border-bottom: solid 0.0625rem #cfd7e5;
}

.emotion-14 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 2.125rem;
  border-left: 0!important;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-right-radius: 1.5rem;
  border-bottom-right-radius: 1.5rem;
}

.emotion-14:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-16 {
  fill: #5b5b71;
  width: 1.1875rem;
  height: 1.1875rem;
}

.emotion-16 path {
  fill: #5b5b71;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <h2>
      Added
    </h2>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div>
            filled
            (
            primary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                  >
                    <div
                      className="emotion-8"
                    >
                      <span
                        className="emotion-9"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-10"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-11"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-12"
                      />
                    </span>
                  </div>
                </div>
                <span
                  className="emotion-13"
                />
                <div
                  className="emotion-14"
                >
                  <span
                    className="emotion-11"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-16"
                    />
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div>
            filled
            (
            secondary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                  >
                    <div
                      className="emotion-8"
                    >
                      <span
                        className="emotion-9"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-10"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-11"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-12"
                      />
                    </span>
                  </div>
                </div>
                <span
                  className="emotion-13"
                />
                <div
                  className="emotion-14"
                >
                  <span
                    className="emotion-11"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-16"
                    />
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <h2>
      Transparent
    </h2>
    <div>
      Transparent Styles are not available for added filters
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Async Filter 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-3:hover>div {
  background-color: #f3f5f8;
}

.emotion-3:active>div {
  background-color: #e7ebf2;
}

.emotion-3:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-3:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-6 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-7 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-7 span {
  font-weight: 700;
}

.emotion-8 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-10 path {
  fill: #0f0f17;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      role="button"
    >
      <div
        className="emotion-2"
      >
        <button
          className="emotion-3"
          data-testid="filter"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <div
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                >
                  <div>
                    Async Label
                     
                    : 
                  </div>
                  <span
                    className="emotion-8"
                  >
                    Default value
                  </span>
                </span>
              </div>
              <span
                className="emotion-9"
                onClick={[Function]}
              >
                <span
                  className="emotion-10"
                />
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Async Filter with min characters 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-3:hover>div {
  background-color: #f3f5f8;
}

.emotion-3:active>div {
  background-color: #e7ebf2;
}

.emotion-3:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-3:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-6 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-7 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-7 span {
  font-weight: 700;
}

.emotion-8 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-10 path {
  fill: #0f0f17;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      role="button"
    >
      <div
        className="emotion-2"
      >
        <button
          className="emotion-3"
          data-testid="filter"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <div
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                >
                  <div>
                    Async Label
                     
                    : 
                  </div>
                  <span
                    className="emotion-8"
                  >
                    Default value
                  </span>
                </span>
              </div>
              <span
                className="emotion-9"
                onClick={[Function]}
              >
                <span
                  className="emotion-10"
                />
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Dynamic Filter Props 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-4 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-4:hover>div {
  background-color: #f3f5f8;
}

.emotion-4:active>div {
  background-color: #e7ebf2;
}

.emotion-4:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-4:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-5 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-7 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-8 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-8 span {
  font-weight: 700;
}

.emotion-9 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-10 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-11 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-11 path {
  fill: #0f0f17;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div>
        filled
        (
        primary
        ): 
      </div>
      <div
        role="button"
      >
        <div
          className="emotion-3"
        >
          <button
            className="emotion-4"
            data-testid="filter"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="emotion-5"
            >
              <div
                className="emotion-6"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  >
                    <div>
                      you can change me
                       
                      : 
                    </div>
                    <span
                      className="emotion-9"
                    >
                      Peach
                    </span>
                  </span>
                </div>
                <span
                  className="emotion-10"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-11"
                  />
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Preset Filter 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-5 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-5:hover>div {
  background-color: #f3f5f8;
}

.emotion-5:active>div {
  background-color: #e7ebf2;
}

.emotion-5:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-5:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-6 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-6:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-8 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-9 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-9 span {
  font-weight: 700;
}

.emotion-10 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-11 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-12 path {
  fill: #0f0f17;
}

.emotion-26 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-26:hover>div {
  background-color: #f3f5f8;
}

.emotion-26:active>div {
  background-color: #e7ebf2;
}

.emotion-26:focus-visible>div {
  border: 0.0625rem solid #F814E1;
}

.emotion-26:focus-visible>span {
  border-top: 0.0625rem solid #F814E1;
  border-bottom: 0.0625rem solid #F814E1;
}

.emotion-27 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: transparent;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-27:hover {
  border: solid 0.0625rem transparent;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <h2>
      Preset
    </h2>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div>
            filled
            (
            primary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                  >
                    <div
                      className="emotion-8"
                    >
                      <span
                        className="emotion-9"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-10"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-11"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-12"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div>
            filled
            (
            secondary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                  >
                    <div
                      className="emotion-8"
                    >
                      <span
                        className="emotion-9"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-10"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-11"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-12"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <h2>
      Transparent
    </h2>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div>
            transparent
            (
            primary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-26"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-27"
                >
                  <div
                    className="emotion-7"
                  >
                    <div
                      className="emotion-8"
                    >
                      <span
                        className="emotion-9"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-10"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-11"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-12"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div>
            transparent
            (
            secondary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-26"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-27"
                >
                  <div
                    className="emotion-7"
                  >
                    <div
                      className="emotion-8"
                    >
                      <span
                        className="emotion-9"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-10"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-11"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-12"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Searchable Filter 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-5 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-5:hover>div {
  background-color: #f3f5f8;
}

.emotion-5:active>div {
  background-color: #e7ebf2;
}

.emotion-5:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-5:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-6 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-6:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-8 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-9 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-9 span {
  font-weight: 700;
}

.emotion-10 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-11 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-12 path {
  fill: #0f0f17;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div>
            filled
            (
            primary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                  >
                    <div
                      className="emotion-8"
                    >
                      <span
                        className="emotion-9"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-10"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-11"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-12"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
